Fix missing colors

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -19,10 +19,10 @@ $item-wp-detail-push-show: true;
 // main colors
 $primary: #ebebeb; // #E60028
 $secondary: #000000; // #ffffff
-$primary-text: #000054;
-$secondary-text: #000000;
-$primary-bg: #EBEBEB;
-$primary-button: #00B5AD;
+$danger: #f53d3d;
+$light: #f4f4f4;
+$primary-dark: #000000;
+$secondary-dark: #222222;
 $border-primary: #dddddd;
 $border-secondary: #cccccc;
 $button: #4470a5;
